# simulation-4

./: .rust-toolchain  LICENSE  README.old.md  package.json
.github/workflows/: main.yml
server-node/: index.js  package.json  parsePostgresUrl.js  routes.js
server-node/controllers/: auth.js  post.js
server-node/db/post/: create.sql  getById.sql  getUser.sql  searchUser.sql
server-node/db/user/: getByUsername.sql  register.sql
server-node/middleware/: requestGuards.js
server-rust/: Cargo.toml  Rocket.toml  server-rust.code-workspace
server-rust/migrations/2020-05-26-235937_users/: down.sql  up.sql
server-rust/migrations/2020-05-26-235943_posts/: down.sql  up.sql
server-rust/migrations/2020-06-23-180542_update_user_password_text/: down.sql  up.sql
server-rust/src/: controllers.rs  lib.rs  main.rs  schema.rs  session.rs
server-rust/src/controllers/: auth.rs  post.rs
server-rust/src/controllers/auth/: errors.rs  responses.rs
server-rust/src/models/: post.rs  session.rs  user.rs
src/: App.js  routes.js
src/Components/Auth/: Auth.js
src/Components/Dashboard/: Dashboard.js
src/Components/Form/: Form.js
src/Components/Nav/: Nav.js
src/Components/Post/: Post.js
