[package]
name = "simulation-4_server-rust"
version = "0.1.0"
authors = ["Jordan Morris <jthecybertinkerer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_contrib = {version="0.4.4", features=[]}
diesel = {version = "1.4.4", features=["postgres"] }
dotenv = "0.15.0"
serde = {version = "1.0.110", features=["derive"]}