[package]
authors = ["Jordan Morris <jthecybertinkerer@gmail.com>"]
edition = "2018"
name = "simulation-4_server-rust"
version = "0.1.0"
[dependencies]
bcrypt = "0.8.0"
dotenv = "0.15.0"
rand = "*"
rocket = "0.4.7"
serde_json = "*"

[dependencies.diesel]
features = ["postgres"]
version = "1.4.4"

[dependencies.rocket_contrib]
features = ["diesel_postgres_pool"]
version = "0.4.4"

[dependencies.serde]
features = ["derive"]
version = "1.0.110"
